k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devboard-frontend-deployment
  namespace: devboard
  labels:
    app: devboard-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devboard-frontend
  template:
    metadata:
      labels:
        app: devboard-frontend
    spec:
      containers:
      - name: devboard-frontend
        image: sauravsam51/devboard-frontend:latest
        ports:
        - containerPort: 4173
