k8s/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: devboard
  labels:
    app: devboard-postgres

spec:
  serviceName: postgres
  replicas: 3

  selector:
    matchLabels:
      app: devboard-postgres

  template:
    metadata:
      labels:
        app: devboard-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

            - name: data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: init
          configMap:
            name: postgres-init

        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
