k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: devboard
spec:
  selector:
    app: devboard-backend
  ports:
  - name: http
    protocol: TCP
    port: 8080 # service
    targetPort: 8080  # Pod port
