k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: devboard-frontend-service
  namespace: devboard
spec:
  type: ClusterIP
  selector:
    app: devboard-frontend
  ports:
  - protocol: TCP
    port: 8080       # Service port
    targetPort: 4173 # Pod port
